<resources>
    <string name="app_name">The Verandah Club</string>

    <!--My Adapter-->
    <string name="loading_error">%1$s, Tap To Retry</string>
    <string name="loading_more_error">%1$s, Tap to Retry</string>
    <string name="no_item">No records found! </string>

    <string name="network_error">Network Error</string>
    <string name="time_out_error">Connection Timeout</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="nav_account">Account</string>

    <!--dialog-->
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_connection_error">Connection Error</string>
    <string name="dialog_title_logout">Logout</string>
    <string name="dialog_title_exit">Exit</string>
    <string name="dialog_title_delete">Delete</string>

    <string name="dialog_message_exit">Are you sure want to exit?</string>
    <string name="dialog_message_delete">Are you sure want to delete?</string>
    <string name="dialog_message_logout">Are you sure want to logout?</string>

    <string name="dialog_btn_logout">Logout</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_retry">Retry</string>
    <string name="dialog_btn_exit">Exit</string>
    <string name="dialog_btn_delete">Delete</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_btn_submit">Submit</string>
    <string name="dialog_btn_clear">Clear</string>


    <string name="tab_favourite">Favourite</string>
    <string name="tab_about">About</string>
    <string name="tab_search">Edition</string>
    <string name="tab_home">Home</string>
    <string name="tab_store">Store</string>
    <string name="tab_categories">Categories</string>

    <!-- TODO - add your ad unit Ids -->
    <!-- AdMob ad unit IDs -->
    <string name="admob_app_id">ca-app-pub-8191567897417758~9088232359</string>
   <!-- <string name="bsanner_home_footer">ca-app-pub-8191567897417758/3237139876</string>-->
    <string name="bsanner_home_footer">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_full_screen">ca-app-pub-8191567897417758/2139680624</string>


    <!--update-->
    <string name="version_name">v%1$s</string>
    <string name="update_available">Update available</string>
    <string name="update_description">Version: %1$s\nCheck out the latest version available</string>
    <string name="btn_update">Update now?</string>
    <string name="btn_skip_update">Cancel</string>
    <string name="btn_update_now">Update now</string>

    <string name="continue_txt">CONTINUE</string>
    <string name="skip_txt">SKIP</string>
    <string name="screen_about">AboutUs</string>
    <string name="screen_tc">TermsConditions</string>
    <string name="screen_privacy">Privacy</string>
</resources>