<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.verandah.club.ui.main.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.verandah.club.ui.main.MainActivity">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <FrameLayout
                android:id="@+id/flContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/bottom_bg_shaddow" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/llTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_bg"
            android:clipChildren="false">

            <LinearLayout
                android:id="@+id/flAbout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackgroundBorderless"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:scaleX="1.2"
                    android:scaleY="1.2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/tab_icon_padding"
                    app:srcCompat="@drawable/ic_nav_fav" />

                <TextView
                    style="@style/tvBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_favourite" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/flSearch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="2dp"
                android:background="?selectableItemBackgroundBorderless"
                android:gravity="center"
                android:orientation="vertical">

                <com.github.florent37.shapeofview.shapes.RoundRectView
                    android:layout_width="22dp"
                    android:layout_margin="3dp"
                    android:layout_height="22dp"
                    style="@style/rcCal"
                    app:srcCompat="@drawable/ic_nav_search" >


                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tvMonth"
                            android:layout_marginTop="-1dp"
                            android:textSize="8dp"
                            android:gravity="center"
                            android:background="#8F8F8F"
                            app:fontFamily="@font/roboto_bold"
                            android:textColor="@color/white"
                            android:text="JUL"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                        <TextView android:layout_marginTop="-1dp"
                            android:id="@+id/tvDate"
                            android:textSize="8dp"
                            android:gravity="center"
                            app:fontFamily="@font/roboto_bold"
                            android:textColor="#636363"
                            android:text="5"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"/>

                    </LinearLayout>

                </com.github.florent37.shapeofview.shapes.RoundRectView>

                <TextView
                    style="@style/tvBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_search" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/flHome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackgroundBorderless"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/tab_icon_padding"
                    app:srcCompat="@drawable/ic_nav_home" />

                <TextView
                    style="@style/tvBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_home"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/flStore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackgroundBorderless"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:scaleX="1.2"
                    android:scaleY="1.2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/tab_icon_padding"
                    app:srcCompat="@drawable/ic_nav_store" />

                <TextView
                    style="@style/tvBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_store" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/flCategories"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackgroundBorderless"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/tab_icon_padding"
                    app:srcCompat="@drawable/ic_nav_category" />

                <TextView
                    style="@style/tvBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_categories" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.drawerlayout.widget.DrawerLayout>

